@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
hide circle

class FileHandler {
    -{static} logger: Logger
    -{static} filePath: String
    -{static} appointmentFilePath: String
    +{static} initFile(fileOperation: FileOperation): void
    +{static} autosave(fileOperation: FileOperation): void
    +{static} parseList(input: String): ArrayList<String>
    +{static} parseVisitInputString(visitString: String): Visit
}

class Main {

}

class CommandHandler {

}

interface FileOperation {
    +initFile(filePath: String): void
    +autosave(filePath: String): void
    +retrieveData(filePath: String): void
}

class Records {
}

class AppointmentRecord {
}

class Visit {
}

class Patient {
}

class Appointment {
}

FileOperation <|.. Records
FileOperation <|.. AppointmentRecord

Main --> FileHandler : calls initFile >
CommandHandler --> FileHandler : calls autosave >

FileHandler --> Records : manages files >
FileHandler --> AppointmentRecord : manages files >
Records "1" o-- "many" Patient
Patient "1" o-- "many" Visit
AppointmentRecord "1" o-- "many" Appointment

@enduml